--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "^10.4.15",
     "google-map-react": "^2.2.1",
@@ -17,9 +18,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "tailwindcss": "^3.3.3"
+    "react-select": "^5.7.5",
+    "tailwindcss": "^3.3.3",
+    "yup": "^1.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
