--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@reduxjs/toolkit": "^1.9.5",
     "autoprefixer": "^10.4.15",
+    "dotenv": "^16.3.1",
     "google-map-react": "^2.2.1",
     "postcss-cli": "^10.1.0",
     "quill": "^1.3.7",
